crates/noc/src/tui/snapshots/noc__tui__panel__tests__draws_icons_in_the_root.snap
---
source: crates/noc/src/tui/panel.rs
expression: terminal.backend()
---
"╔ alex-mbp ════════════╤═══════╤═══════╗"
"║         Name         │ Free  │ Size  ║"
"║󰋜 Home                │   212G│   994G║"
"║󰋊 Macintosh HD        │   212G│   994G║"
"║󰋊 USB                 │   212G│   994G║"
"║󰣳 share               │      ?│      ?║"
"║󰡰 SFTP                │       │3 hosts║"
"║󰒋 Prod                │deploy@│~.0.0.5║"
"╟──────────────────────┴───────┴───────╢"
"║/home/me                              ║"
"╚══════════════════════════════════════╝"
