crates/noc/src/tui/snapshots/noc__tui__panel__tests__draws_icons_with_ui_icons.snap
---
source: crates/noc/src/tui/panel.rs
expression: terminal.backend()
---
"╔ /srv ═══════════╤═══════╤════════════╗"
"║      ↑Name      │ Size  │Modify time ║"
"║ ..             │UP--DIR│            ║"
"║ alpha-link     │    DIR│Nov 14 21:13║"
"║ Beta           │    DIR│Nov 14 21:13║"
"║ bin            │    DIR│Nov 14 21:13║"
"║ .hidden        │      1│Nov 14 21:13║"
"╟─────────────────┴───────┴────────────╢"
"║..                                    ║"
"╚══════════════════════════════════════╝"
