crates/noc/src/tui/snapshots/noc__tui__panel__tests__draws_the_hosts_with_labels_and_cached_addresses.snap
---
source: crates/noc/src/tui/panel.rs
expression: "draw(&mut panel, 50, 9, true)"
---
"╔ SFTP ══════════════════════════════════════════╗"
"║         Name          │        Address         ║"
"║/..                    │UP--DIR                 ║"
"║○ Prod                 │deploy@10.0.0.5         ║"
"║○ db                   │                        ║"
"║○ staging              │ubuntu@stg.e~le.org:2222║"
"╟────────────────────────────────────────────────╢"
"║web                                             ║"
"╚════════════════════════════════════════════════╝"
