crates/noc/src/tui/snapshots/noc__tui__panel__tests__draws_the_root_with_volumes_and_connected_hosts.snap
---
source: crates/noc/src/tui/panel.rs
expression: "render(&mut panel, 50, 10, true, &online)"
---
"╔ alex-mbp ══════════════════════════════════════╗"
"║              Name              │ Free  │ Size  ║"
"║+ Macintosh HD                  │   212G│   994G║"
"║+ USB                           │   212G│   994G║"
"║+ share                         │      ?│      ?║"
"║/ SFTP                          │        3 hosts║"
"║● Prod                          │deploy@10.0.0.5║"
"╟────────────────────────────────────────────────╢"
"║/Volumes/USB  apfs                              ║"
"╚════════════════════════════════════════════════╝"
