crates/noc/src/tui/snapshots/noc__tui__panel__tests__narrow_panels_drop_columns_and_unsafe_names_are_shown_safely.snap
---
source: crates/noc/src/tui/panel.rs
expression: "draw(&mut panel, 24, 7, true)"
---
"╔ /a/very/lo~s/not/fit ╗"
"║    ↑Name     │ Size  ║"
"║/..           │UP--DIR║"
"║ bad?[2Jname  │      3║"
"╟──────────────┴───────╢"
"║bad?[2Jname           ║"
"╚══════════════════════╝"
