crates/noc/src/tui/snapshots/noc__tui__panel__tests__the_frame_shows_the_space_of_the_file_system_while_it_fits.snap
---
source: crates/noc/src/tui/panel.rs
expression: "draw(&mut panel, 30, 6, true)"
---
"╔ /srv ══════════════╤═══════╗"
"║       ↑Name        │ Size  ║"
"║/..                 │UP--DIR║"
"╟────────────────────┴───────╢"
"║..                          ║"
"╚════════ 123G / 500G (24%) ═╝"
