crates/noc/src/tui/snapshots/noc__tui__panel__tests__the_root_marks_connection_states_and_prefers_fresh_addresses.snap
---
source: crates/noc/src/tui/panel.rs
expression: "render(&mut panel, 50, 9, false, &hosts)"
---
"┌ Hosts ─────────────────────────────────────────┐"
"│         Name          │        Address         │"
"│  [Local]              │~                       │"
"│● Prod                 │deploy@10.0.0.9         │"
"│✗ db                   │                        │"
"│| staging              │ubuntu@stg.e~le.org:2222│"
"├────────────────────────────────────────────────┤"
"│/home/me                                        │"
"└────────────────────────────────────────────────┘"
